# xgsch2pcb

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  update-changelogs.sh  xgsch2pcb.in
data/: .gitignore  Makefile.am  geda-xgsch2pcb.desktop.in
lib/xgsch2pcb/: assistant.py  config.py.in  funcs.py  gsch2pcbproject.py  gui.py  new_project_gui.py  pcbmanager.py  templates.py
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  README  ar.po  de_DE.po  en_GB.po  es.po  es_ES.po  fr.po  geda-xgsch2pcb.pot  it.po  nl.po  nl_NL.po  pl.po  pt_BR.po  ru.po  tr.po  zh_CN.po
support/: pcb.g_dbus.patch  pcb.projectman.patch  pcb.window_raise_actions.patch
support/pcb_libdbus/: pcb.rawdbus.automake_support.patch  pcb.rawdbus.dbus_code.patch  pcb.rawdbus.hid_support.patch  pcb.rawdbus.libiberty_bundle.patch  pcb.rawdbus.setup_hooks.patch
